<resources>
    <string name="app_name">FallsCatcher</string>
    <string name="edit">Edit</string>
    <string name="tab_text_1">Browse</string>
    <string name="tab_text_2">Add</string>
    <string name="tab_text_3">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_fall">addFall</string>
    <string name="back">Back</string>
    <string name="right_arm">Right Arm</string>
    <string name="head">Head</string>
    <string name="left_arm">Left Arm</string>
    <string name="other">Other</string>
    <string name="right_leg">Right Leg</string>
    <string name="torso">Torso</string>
    <string name="left_leg">Left Leg</string>
    <string name="register_fall">Register Fall</string>
    <string name="date">Date:</string>
    <string name="slash">/</string>
    <string name="enter_fall">Enter Fall</string>
    <string name="clear_fall">Clear Fall</string>
    <string name="poor_balance">Poor Balance</string>
    <string name="presumed_cause_of_fall">Presumed Cause of Fall</string>
    <string name="weak_legs_or_legs_gave_way">Weak legs or legs gave way</string>
    <string name="not_using_a_walking_aid_incorrectly_using_a_walking_aid_or_using_wrong_walking_aid">Not using a walking aid, incorrectly using a walking aid or using wrong walking aid</string>
    <string name="tripped_or_slipped">Tripped or Slipped</string>
    <string name="transfer_from_surface_to_surface_went_wrong">Transfer from surface to surface went wrong</string>
    <string name="not_paying_attention_or_getting_distracted">Not paying attention or getting distracted</string>
    <string name="i_m_not_sure">I\'m not sure</string>
    <string name="other_please_give_details_below">Other (please give details below)</string>
    <string name="fatigued">Fatigued</string>
    <string name="overheated_too_hot">Overheated (too hot)</string>
    <string name="felt_dizzy_or_faint">Felt dizzy or faint</string>
    <string name="poor_vision_didnt_see_an_obstacle">Poor vision (didnt see an obstacle)</string>
    <string name="weather_ice_rain_snow_or_wind">Weather - Ice, Rain, Snow or Wind</string>
    <string name="doing_something_risky">Doing something risky</string>
    <string name="another_medical_problem_unrelated_to_ms">Another medical problem unrelated to MS</string>
    <string name="injury_suffered_as_a_result">Injury suffered as a result</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="miscalculated_a_distance_under_or_overreaching">Miscalculated a distance, under or overreaching</string>
    <string name="did_you_require_help_up">Did you require help up</string>
    <string name="length_of_lie">Length of lie</string>
    <string name="exact">Exact</string>
    <string name="estimate">Estimate</string>
    <string name="unknown">Unknown</string>
    <string name="time_of_fall">Time of Fall</string>
    <string name="select">Select</string>
    <string name="current">Current</string>
    <string name="date_of_fall">Date of Fall</string>
    <string name="medical_attention_needed">Medical Attention Needed</string>
    <string name="did_you_suffer_an_ms_relapse">Did you suffer an ms relapse</string>
    <string name="outside_home">Outside Home</string>
    <string name="inside_home">Inside Home</string>
    <string name="away_from_home">Away from Home</string>
    <string name="enter_time_of_fall">Enter time of fall</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="title_activity_login_page">loginPage</string>
</resources>
